--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -969,7 +969,7 @@
        "Blackened Tuna Steaks With Mango Salsa  https://www.allrecipes.com/recipe/103535/black...  "
       ]
      },
-     "execution_count": 423,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,6 +978,26 @@
     "df_nutrient = pd.read_csv('dinner_nutrient.csv')\n",
     "df_nutrient.set_index('title', inplace=True)\n",
     "df_nutrient.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(156, 11)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nutrient[(df_nutrient.cook_time <= 30) & (df_nutrient.cook_time != 0)].shape"
    ]
   },
   {
@@ -1304,13 +1324,6 @@
     "\n",
     "https://health.gov/dietaryguidelines/2015/resources/2015-2020_dietary_guidelines.pdf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
