Update LDA file

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -2353,7 +2353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The best number of topics is 4 or 6."
+    "#### The best number of topics is 4, 6, 8 or 9."
    ]
   },
   {
@@ -2457,7 +2457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### With alpha of asymmetric and beta of 1, I can achieve 13.5% improvement in coherence score over the baseline."
+    "#### With alpha of 0.1 and beta of 1, I can achieve 14.5% improvement in coherence score over the baseline."
    ]
   },
   {
